# split

./: Cargo.toml  README.md  tests.sh
.github/workflows/: audit.yml  rust.yml
src/: main.rs
tests/: integration_tests.rs
