[package]
name = "split"
version = "0.1.0"
authors = ["Martin Sirringhaus"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4", features = ["derive"]}

[dev-dependencies]
assert_cmd = "1.0.1"
duct = "0.13.4"
